--- a/assets/css/_sass/_layout.scss
+++ b/assets/css/_sass/_layout.scss
@@ -44,10 +44,15 @@ body {
         .content-container {
             max-width: 600px;
             margin: 0 auto;
-            padding: 0rem 2rem;
+            padding: 1rem 0rem;
+
             display: flex;
             align-items: center;
             flex-direction: column;
+
+            @media screen and (min-width: 768px) {
+                padding: 2rem 2rem;
+            }
 
             .paragraph {
                 text-align: justify;
