--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,15 @@ body .container {
 body .container .content-container {
   max-width: 600px;
   margin: 0 auto;
-  padding: 0rem 2rem;
+  padding: 1rem 0rem;
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  body .container .content-container {
+    padding: 2rem 2rem;
+  }
 }
 body .container .content-container .paragraph {
   text-align: justify;
@@ -97,13 +102,14 @@ nav a:hover {
   display: grid;
   grid-template-columns: minmax(300px, 1fr);
   gap: 1.5rem;
-  padding: 2rem 2rem;
+  padding: 1rem 2rem;
   max-width: 650px;
   margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
   .post-grid {
     grid-template-columns: repeat(2, minmax(250px, 1fr));
+    padding: 2rem 2rem;
   }
 }
 
@@ -157,7 +163,6 @@ nav a:hover {
 .article-content {
   max-width: 800px;
   margin: 0 auto;
-  padding: 2rem;
 }
 .article-content figure {
   margin: 2rem auto;
